# routes/userRoutes.js
@@ -3,5 +3,5 @@ const router = express.Router();
 const authController = require('./../controllers/authController');
 
 router.post('/users', authController.signup);
-
+router.post('/sessions', authController.login);
 module.exports = router;
